<resources>
    <!-- General app strings goes here -->
    <string name="app_name">avocado</string>

    <!-- Main Activity -->
    <string name="main_menu_expenses">Expenses</string>
    <string name="main_menu_goals">Goals</string>
    <string name="main_menu_dashboard">Dashboard</string>
    <string name="main_menu_notifications">Notifications</string>
    <string name="main_menu_reports">Reports</string>

    <!-- Notifications Use Case -->
    <string name="notifications">Notifications</string>
    <string name="notifications_title_budget_alert">Budget Alert</string>
    <string name="notifications_title_budget_busted">Budget Busted</string>

    <string name="notif_msg_budget_in_alert_range">Warning, your expenses achieved ${TOKEN} of value set in the budget control.
    \n\nCategory: ${CATEGORY}
        \nBudget: ${BUDGET}
        \nExpenditure: ${EXPENDITURE}
    </string>
    <string name="notif_msg_budget_busted">Warning, budget is busted. You are ${TOKEN} over the budget defined.
    \n\nCategory: ${CATEGORY}
        \nBudget: ${BUDGET}
        \nExpenditure: ${EXPENDITURE}
    </string>


    <!-- Expenses Entry Use Case -->
    <string name="exp_entry_title">New Entry</string>
    <string name="exp_entry_hint_insert_text">write here a description</string>
    <string name="exp_entry_cancel_button">Cancel</string>
    <string name="exp_entry_save_button">Save</string>
    <string name="exp_entry_hint_value">$ 0.00</string>
    <string name="exp_entry_success_saving_msg">Expense successfully saved.</string>
    <string name="exp_entry_dialog_title">Validation Error</string>
    <string name="exp_entry_dialog_ok_button">OK</string>
    <string name="exp_entry_dialog_value_message">A valid expense value must be provided</string>
    <string name="exp_entry_dialog_date_message">An expense date cannot be a future date</string>
    <string name="exp_entry_dialog_description_message">An expense description must be provided</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reportsTitle">Reports</string>
    <string name="textViewReport1">The Largest expense is:</string>
    <string name="textViewReport2">TextView</string>
    <string name="textViewReport3">TextView</string>
    <string name="textViewReport4">TextView</string>


</resources>
