<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_all_expenses"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_menu_expenses" />

    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/main_menu_goals" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/main_menu_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/main_menu_notifications" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/main_menu_reports" />


</menu>
