<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    tools:context=".ui.activity.ExpenseEntryActivity">

    <EditText
        android:id="@+id/editTextValue"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/exp_entry_hint_value"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValue" />

    <Spinner
        android:id="@+id/spinnerSubcategory"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

    <TextView
        android:id="@+id/textViewCurrentDate"
        style="?android:attr/spinnerStyle"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSubcategory" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/exp_entry_hint_insert_text"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentDate" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:gravity="bottom|left|right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorCancelButton"
            android:text="@string/exp_entry_cancel_button"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="441dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/exp_entry_save_button"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="260dp"
            tools:layout_editor_absoluteY="331dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>